@@ -4,12 +4,13 @@ require 'logger'
 
 class Ernie
   class << self
-    attr_accessor :mods, :current_mod, :logger
+    attr_accessor :mods, :current_mod, :log
   end
 
   self.mods = {}
   self.current_mod = nil
-  self.logger = nil
+  self.log = Logger.new(STDOUT)
+  self.log.level = Logger::INFO
 
   # Record a module.
   #   +name+ is the module Symbol
@@ -53,15 +54,15 @@ class Ernie
   #
   # Returns nothing
   def self.logfile(file)
-    self.logger = Logger.new(file)
+    self.log = Logger.new(file)
   end
 
-  # If logging is enabled, log the given text.
-  #   +text+ is the String to log
+  # Set the log level.
+  #   +level+ is the Logger level (Logger::WARN, etc)
   #
   # Returns nothing
-  def self.log(text)
-    self.logger.info(text) if self.logger
+  def self.loglevel(level)
+    self.log.level = level
   end
 
   # Dispatch the request to the proper mod:fun.
@@ -114,8 +115,8 @@ class Ernie
   #
   # Loops forever
   def self.start
-    self.log("Starting")
-    self.log(self.mods.inspect)
+    self.log.info("(#{Process.pid}) Starting")
+    self.log.debug(self.mods.inspect)
 
     input = IO.new(3)
     output = IO.new(4)
@@ -126,31 +127,32 @@ class Ernie
       iruby = self.read_berp(input)
       unless iruby
         puts "Could not read BERP length header. Ernie server may have gone away. Exiting now."
+        self.log.info("(#{Process.pid}) Could not read BERP length header. Ernie server may have gone away. Exiting now.")
         exit!
       end
 
       if iruby.size == 4 && iruby[0] == :call
         mod, fun, args = iruby[1..3]
-        self.log("-> " + iruby.inspect)
+        self.log.info("-> " + iruby.inspect)
         begin
           res = self.dispatch(mod, fun, args)
           oruby = t[:reply, res]
-          self.log("<- " + oruby.inspect)
+          self.log.debug("<- " + oruby.inspect)
           write_berp(output, oruby)
         rescue ServerError => e
           oruby = t[:error, t[:server, 0, e.class.to_s, e.message, e.backtrace]]
-          self.log("<- " + oruby.inspect)
-          self.log(e.backtrace.join("\n"))
+          self.log.error("<- " + oruby.inspect)
+          self.log.error(e.backtrace.join("\n"))
           write_berp(output, oruby)
         rescue Object => e
           oruby = t[:error, t[:user, 0, e.class.to_s, e.message, e.backtrace]]
-          self.log("<- " + oruby.inspect)
-          self.log(e.backtrace.join("\n"))
+          self.log.error("<- " + oruby.inspect)
+          self.log.error(e.backtrace.join("\n"))
           write_berp(output, oruby)
         end
       elsif iruby.size == 4 && iruby[0] == :cast
         mod, fun, args = iruby[1..3]
-        self.log("-> " + [:cast, mod, fun, args].inspect)
+        self.log.info("-> " + [:cast, mod, fun, args].inspect)
         begin
           self.dispatch(mod, fun, args)
         rescue Object => e
@@ -158,9 +160,9 @@ class Ernie
         end
         write_berp(output, t[:noreply])
       else
-        self.log("-> " + iruby.inspect)
+        self.log.error("-> " + iruby.inspect)
         oruby = t[:error, t[:server, 0, "Invalid request: #{iruby.inspect}"]]
-        self.log("<- " + oruby.inspect)
+        self.log.error("<- " + oruby.inspect)
         write_berp(output, oruby)
       end
     end
@@ -194,6 +196,10 @@ end
 
 def logfile(name)
   Ernie.logfile(name)
+end
+
+def loglevel(level)
+  Ernie.loglevel(level)
 end
 
 at_exit do
